consistent validation middleware ( params and body )
